tests/error/testcaseErrorNodeAssign.g
car c;

programa {
    c = 5;
}